[project]
name = "mcp-server-word"
version = "0.1.0"
description = "Interaction for WXP Apps"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "mcp==1.2.1",
    "pywin32==308",
]

[dependency-groups]
dev = ["pyright>=1.1.389"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
