[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Example of a python Semantic Workbench assistant."
authors = ["Semantic Workbench Team"]
readme = "README.md"
packages = [{ include = "assistant" }]

[tool.poetry.dependencies]
python = "~3.11"
openai = "^1.3.9"

# If you copy this file to your project, you should verify the relative path to the following:
semantic-workbench-assistant = { path = "../../../libraries/python/semantic-workbench-assistant", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["venv", ".venv"]
