[project]
name = "assistant"
version = "0.1.0"
description = "Example of a python Semantic Workbench assistant."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.3.9", "semantic-workbench-assistant>=0.1.0"]

[tool.uv]
package = true

[tool.uv.sources]
semantic-workbench-assistant = { path = "../../../libraries/python/semantic-workbench-assistant", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]
