[project]
name = "assistant"
version = "0.1.0"
description = "Exploration of a python Semantic Workbench OpenAI assistant."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.3.9",
    "tiktoken>=0.7.0",
    "semantic-workbench-assistant>=0.1.0",
    "content-safety>=0.1.0",
    "openai-client>=0.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
semantic-workbench-assistant = { path = "../../../libraries/python/semantic-workbench-assistant", editable = true }
content-safety = { path = "../../../libraries/python/content-safety/", editable = true }
openai-client = { path = "../../../libraries/python/openai-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
